Agregando H4 en el index

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                                  <h1>Best Logistica Company</h1>
                                  <h2>Prueba 02</h2>
                                  <h3>Prueba 03</h3>
+                                 <h4>Prueba 04</h4>
                                  <span>Contrary to popular belief, Lorem Ipsum is not simply random text. It has i</span>
                                  <a class="read_more" href="#">Contact Us</a>
                               </div>
