--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                         <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Address : Lorem Ipsum <br> is simply dummy 
                         </li>
                         <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : jpardol@gmail.com</li>
                      </ul>
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
