--- a/index.html
+++ b/index.html
@@ -579,6 +579,8 @@
                         </li>
                         <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : jpardol@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : pardolopezjhon@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : jhonsantiagopardo@gmail.com</li>
                      </ul>
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
