--- a/index.html
+++ b/index.html
@@ -578,11 +578,17 @@
                         <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Address : Lorem Ipsum <br> is simply dummy 
                         </li>
                         <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a>Phone :  +(1234) 567 890</li>
+
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : jpardol@gmail.com</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : pardolopezjhon@gmail.com</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : jhonsantiagopardo@gmail.com</li>
+
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : holamundo@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : helloworld@gmail.com</li>
+
                      </ul>
-                     <form class="bottom_form">
+                     <form class="bottom_form">s
                         <h3>Newsletter</h3>
                         <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
                         <button class="sub_btn">subscribe</button>
