Agregando correo jpardolopez@gmail.com

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : demo@gmail.com</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : holamundo@gmail.com</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : helloworld@gmail.com</li>
-
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Email : jpardolopez@gmail.com</li>
                      </ul>
                      <form class="bottom_form">s
                         <h3>Newsletter</h3>
